feat: toast and navigate

--- a/src/app/core/pages/register/register.component.html
+++ b/src/app/core/pages/register/register.component.html
@@ -1,10 +1,11 @@
+<p-toast position="top-left"></p-toast>
 <section class="flex flex-column justify-content-center align-items-center min-h-screen">
   <form [formGroup]="user" (ngSubmit)="postUser()" class="p-5 flex flex-column gap-3">
     <h1 class="m-0 mb-2 text-3xl">Fazer cadastro</h1>
     
     <fieldset class="border-none p-0 m-0">
       <legend class="mb-2">
-        <label for="email">Email</label>
+        <label for="email">Email</label>  
       </legend>
       <span class="p-input-icon-right">
         <i class="pi pi-envelope"></i>
