feat: loading service

--- a/src/app/core/pages/register/register.component.html
+++ b/src/app/core/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<p-toast position="top-left"></p-toast>
+<p-toast></p-toast>
 <section class="flex flex-column justify-content-center align-items-center min-h-screen">
   <form [formGroup]="user" (ngSubmit)="postUser()" class="p-5 flex flex-column gap-3">
     <h1 class="m-0 mb-2 text-3xl">Fazer cadastro</h1>
@@ -48,6 +48,6 @@
       <small class="text-red-600">{{getRequestError()}}</small>
     </div>
 
-    <p-button label="Registrar" icon="pi pi-check" type="submit" [disabled]="user.invalid"></p-button>
+    <p-button label="Registrar" icon="pi pi-check" type="submit" [disabled]="user.invalid" [loading]="load"></p-button>
   </form>
 </section>
