--- a/src/app/core/pages/register/register.component.html
+++ b/src/app/core/pages/register/register.component.html
@@ -63,6 +63,6 @@
       <small class="text-red-600">{{getRequestError()}}</small>
     </div>
 
-    <p-button label="Registrar" icon="pi pi-check" type="submit" [disabled]="user.invalid" [loading]="load"></p-button>
+    <p-button label="Registrar" icon="pi pi-check" type="submit" [loading]="load"></p-button>
   </form>
 </section>
