--- a/src/app/core/pages/register/register.component.html
+++ b/src/app/core/pages/register/register.component.html
@@ -1,20 +1,40 @@
 <p-toast></p-toast>
-<section class="flex flex-column justify-content-center align-items-center min-h-screen">
-  <form [formGroup]="user" (ngSubmit)="postUser()" class="p-5 flex flex-column gap-3">
+<section
+  class="flex flex-column justify-content-center align-items-center min-h-screen"
+>
+  <form
+    [formGroup]="user"
+    (ngSubmit)="postUser()"
+    class="p-5 flex flex-column gap-3"
+  >
     <h1 class="m-0 mb-2 text-3xl">Fazer cadastro</h1>
-    
+
     <fieldset class="border-none p-0 m-0">
       <legend class="mb-2">
-        <label for="email">Email</label>  
+        <label for="email">Email</label>
       </legend>
       <span class="p-input-icon-right">
         <i class="pi pi-envelope"></i>
-        <input type="email" pInputText formControlName="email" placeholder="Digite seu email" id="email" 
-        [ngClass]="{'ng-invalid ng-dirty': inputInvalid('email')}" />
+        <input
+          type="email"
+          pInputText
+          formControlName="email"
+          placeholder="Digite seu email"
+          id="email"
+          [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('email') }"
+        />
       </span>
       <div *ngIf="inputInvalid('email')">
-        <small class="text-red-600" *ngIf="getInputError('email', 'required')">Campo obrigatório</small>
-        <small class="text-red-600" *ngIf="getInputError('email', 'email')">Digite um email válido</small>
+        <small
+          class="text-red-600"
+          *ngIf="getInputError('email', 'required')"
+          >Campo obrigatório</small
+        >
+        <small
+          class="text-red-600"
+          *ngIf="getInputError('email', 'email')"
+          >Digite um email válido</small
+        >
       </div>
     </fieldset>
 
@@ -22,12 +42,26 @@
       <legend class="mb-2">
         <label for="password">Senha</label>
       </legend>
-      <p-password formControlName="password" placeholder="Digite sua senha" [toggleMask]="true" inputId="password" 
-      [ngClass]="{'ng-invalid ng-dirty': inputInvalid('password')}">
+      <p-password
+        formControlName="password"
+        placeholder="Digite sua senha"
+        [toggleMask]="true"
+        inputId="password"
+        [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('password') }"
+      >
       </p-password>
       <div *ngIf="inputInvalid('password')">
-        <small class="text-red-600" *ngIf="getInputError('password', 'required')">Campo obrigatório</small>
-        <small class="text-red-600" *ngIf="getInputError('password', 'pattern')">A senha deve ter no minimo 6 caracteres<br> sendo 1 maiusculo</small>
+        <small
+          class="text-red-600"
+          *ngIf="getInputError('password', 'required')"
+          >Campo obrigatório</small
+        >
+        <small
+          class="text-red-600"
+          *ngIf="getInputError('password', 'pattern')"
+          >A senha deve ter no minimo 6 caracteres<br />
+          sendo 1 maiusculo</small
+        >
       </div>
     </fieldset>
 
@@ -35,34 +69,68 @@
       <legend class="mb-2">
         <label for="confirmPassword">Confirmar senha</label>
       </legend>
-      <p-password formControlName="confirmPassword" placeholder="Confirme sua senha" [toggleMask]="true" inputId="confirmPassword"
-      [ngClass]="{'ng-invalid ng-dirty': inputInvalid('confirmPassword')}">
+      <p-password
+        formControlName="confirmPassword"
+        placeholder="Confirme sua senha"
+        [toggleMask]="true"
+        inputId="confirmPassword"
+        [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('confirmPassword') }"
+      >
       </p-password>
       <div *ngIf="inputInvalid('confirmPassword')">
-        <small class="text-red-600" *ngIf="getInputError('confirmPassword', 'required')">Campo obrigatório</small>
-        <small class="text-red-600" *ngIf="getInputError('confirmPassword', 'passwordMismatch')">As senhas devem ser iguais</small>
+        <small
+          class="text-red-600"
+          *ngIf="getInputError('confirmPassword', 'required')"
+          >Campo obrigatório</small
+        >
+        <small
+          class="text-red-600"
+          *ngIf="getInputError('confirmPassword', 'passwordMismatch')"
+          >As senhas devem ser iguais</small
+        >
       </div>
     </fieldset>
 
     <fieldset class="border-none p-0 m-0">
       <legend class="mb-2">
-        <label for="phone">Telefone</label>  
+        <label for="phone">Telefone</label>
       </legend>
       <span class="p-input-icon-right">
         <i class="pi pi-phone"></i>
-        <input type="text" pInputText formControlName="phone" placeholder="Digite seu telefone" id="phone" 
-        [ngClass]="{'ng-invalid ng-dirty': inputInvalid('phone')}" />
+        <input
+          type="text"
+          pInputText
+          formControlName="phone"
+          placeholder="Digite seu telefone"
+          id="phone"
+          [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('phone') }"
+        />
       </span>
       <div *ngIf="inputInvalid('phone')">
-        <small class="text-red-600" *ngIf="getInputError('phone', 'required')">Campo obrigatório</small>
-        <small class="text-red-600" *ngIf="getInputError('phone', 'pattern')">Digite um telefone válido</small>
+        <small
+          class="text-red-600"
+          *ngIf="getInputError('phone', 'required')"
+          >Campo obrigatório</small
+        >
+        <small
+          class="text-red-600"
+          *ngIf="getInputError('phone', 'pattern')"
+          >Digite um telefone válido</small
+        >
       </div>
     </fieldset>
 
     <div *ngIf="getRequestError()">
-      <small class="text-red-600">{{getRequestError()}}</small>
+      <small class="text-red-600">{{ getRequestError() }}</small>
     </div>
 
-    <p-button label="Registrar" icon="pi pi-check" type="submit" [loading]="load"></p-button>
+    <p-button
+      label="Registrar"
+      icon="pi pi-check"
+      type="submit"
+      [loading]="load"
+    ></p-button>
   </form>
+  <a routerLink="/login">Já tenho conta</a>
 </section>
+
