--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,5 @@
 @import 'primeng/resources/primeng.css';
 @import 'primeflex/primeflex.css';
 @import 'primeicons/primeicons.css';
+
+@import './app/styles/primeng.scss';
