--- a/src/app/core/components/layout/layout.component.scss
+++ b/src/app/core/components/layout/layout.component.scss
@@ -1,3 +1,16 @@
-#action-btns {
-  max-width: 400px;
+:host {
+  .space-left-content {
+    margin-left: 0;
+  }
+
+  .space-bottom-content {
+    margin-bottom: 200px;
+  }
+}
+@media (min-width: 768px) {
+  :host {
+    .space-left-content {
+      margin-left: 400px;
+    }
+  }
 }
