fix: actions buttons sizes & padding for responsive design

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -24,7 +24,7 @@
       icon="pi pi-user"
       severity="info"
       (click)="onClickMenu()"
-      styleClass="w-full text-left"
+      styleClass="w-full"
     ></p-button>
     @for(actionButton of actionButtons; track actionButton.label) {
     <p-button
