--- a/src/app/styles/primeng.scss
+++ b/src/app/styles/primeng.scss
@@ -1,21 +1,34 @@
 .p-sidebar {
   height: 17rem;
-  .p-sidebar-content {
-    padding: 0 36px;
-  }
-
   .p-sidebar-footer {
     display: none;
   }
   #action-buttons {
-    max-width: 400px;
-    max-width: 328px;
     & p-button:first-child {
       width: 100%;
     }
   }
 }
 
+@media (min-width: 375px) {
+  .p-sidebar {
+    height: 17rem;
+    .p-sidebar-content {
+      margin: 0 auto;
+    }
+
+    .p-sidebar-footer {
+      display: none;
+    }
+    #action-buttons {
+      max-width: 400px;
+      max-width: 328px;
+      & p-button:first-child {
+        width: 100%;
+      }
+    }
+  }
+}
 @media (min-width: 768px) {
   .p-sidebar {
     padding-top: 30px;
