feat: change layout

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -44,7 +44,7 @@
       icon=" pi pi-cog"
       severity="secondary"
       [outlined]="true"
-      styleClass="flex gap-2 no-underline w-full text-left"
+      styleClass="flex gap-2 no-underline w-full text-left justify-content-center"
     ></p-button>
   </ng-template>
 </p-sidebar>
