--- a/src/app/core/pages/login/login.component.html
+++ b/src/app/core/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <main>
   <div class="left-container">
     <img
-      src="/assets/left-draw.svg"
+      src="/assets/login.svg"
       width="300"
     />
   </div>
@@ -15,12 +15,12 @@
         <span class="block text-center"> Login </span>
       </ng-template>
       <form
-        [formGroup]="user"
+        [formGroup]="account"
         class="p-3 flex flex-column gap-3 formgrid"
-        (ngSubmit)="postUser()"
+        (ngSubmit)="onSubmitForm()"
       >
-        <fieldset class="border-none p-0 m-0 field col-12">
-          <legend class="mb-2">
+        <fieldset class="field col-12 mb-0 px-0">
+          <legend>
             <label for="email">Email</label>
           </legend>
           <span class="p-input-icon-right w-full">
@@ -32,25 +32,12 @@
               id="email"
               formControlName="email"
               class="w-full"
-              [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('email') }"
             />
           </span>
-          <div *ngIf="inputInvalid('email')">
-            <small
-              class="text-red-600"
-              *ngIf="getInputError('email', 'required')"
-              >Campo obrigatório</small
-            >
-            <small
-              class="text-red-600"
-              *ngIf="getInputError('email', 'email')"
-              >Digite um email válido</small
-            >
-          </div>
         </fieldset>
 
-        <fieldset class="border-none p-0 m-0 col col-12">
-          <legend class="mb-2">
+        <fieldset class="field col-12 mb-0 px-0">
+          <legend>
             <label for="password">Senha</label>
           </legend>
           <p-password
@@ -58,45 +45,33 @@
             [toggleMask]="true"
             inputId="password"
             formControlName="password"
-            [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('password') }"
             [feedback]="false"
             [style]="{ width: '100%' }"
             [inputStyle]="{ width: '100%' }"
           >
           </p-password>
-          <div *ngIf="inputInvalid('password')">
-            <small
-              class="text-red-600"
-              *ngIf="getInputError('password', 'required')"
-              >Campo obrigatório</small
-            >
-            <small
-              class="text-red-600"
-              *ngIf="getInputError('password', 'pattern')"
-              >A senha deve ter no minimo 6 caracteres<br />
-              sendo 1 maiúsculo</small
-            >
-          </div>
         </fieldset>
 
-        <div *ngIf="getRequestError()">
-          <small class="text-red-600">{{ getRequestError() }}</small>
-        </div>
+        <a
+          class="no-underline hover:underline text-blue-700 align-self-end"
+          href="/esqueci-minha-senha"
+          >Esqueci minha senha?</a
+        >
 
         <div
-          class="flex col-12 px-0 pb-0 flex-column-reverse sm:flex-row sm:justify-content-end"
+          class="flex col-12 p-0 pt-2 flex-column-reverse sm:flex-row sm:justify-content-end"
         >
           <p-button
             label="Entrar"
             type="submit"
-            [disabled]="user.invalid"
-            [loading]="load"
+            [disabled]="account.invalid || submitting"
+            [loading]="submitting"
             styleClass="justify-content-center w-full sm:w-auto"
           ></p-button>
         </div>
         <a
-          class="no-underline hover:underline"
-          routerLink="/register"
+          class="no-underline hover:underline text-blue-700 align-self-start"
+          href="/register"
           >Não tenho conta</a
         >
       </form>
